# guindex-py

./: .gitignore  LICENSE  README.md  pyproject.toml
src/guindex/: __init__.py  guindex_constants.py  guindex_functions.py
tests/: test_guindex.py
